jira: enable tests, remove Gson usage, prep for okhttp 2.X removal (#159)